# hermes-types

./: Cargo.toml
memory-management/: Cargo.toml
memory-management/src/: main.rs  segv-c
operating-system-overview/: Cargo.toml
operating-system-overview/src/: main.rs
process-management/: Cargo.toml  wait_ret.sh
process-management/src/: main.rs
process-scheduler/: Cargo.toml  multiload.sh
process-scheduler/src/: main.rs
src/: lib.rs  serde_hex.rs
